# tamanoir

./: .gitignore  Cargo.toml  Justfile  Log  README.md  Release.md  log  rustc-ice-2024-10-29T13_25_50-149520.txt
.github/workflows/: ci.yaml  release.yaml
assets/examples/payloads/hello/: linker.ld
assets/examples/payloads/hello/.cargo/: config.toml
assets/examples/payloads/hello/src/: hello.txt
assets/examples/payloads/reverse-tcp/: linker.ld
assets/examples/payloads/reverse-tcp/.cargo/: config.toml
assets/examples/payloads/reverse-tcp/src/: main.rs
assets/examples/payloads/shell/: Cargo.toml
assets/examples/payloads/shell/src/: main.rs
assets/layouts/: azerty.yml
assets/rce-tester/src/: main.rs
assets/x_build_utils/: Cross_x86_64.toml  build.rs
proxy/: Dockerfile  azerty.yml  keymap.yml  main.py  qwerty.yml
rce/: Justfile
rce/payloads/reverse-tcp/.cargo/: config.toml
rce/payloads/reverse-tcp/src/: main.rs
rce/src/: main.rs
tamanoir/: Cargo.toml  build.rs
tamanoir-c2/: Cargo.toml  Justfile  build.rs
tamanoir-c2/examples/payloads/hello/: linker.ld
tamanoir-c2/examples/payloads/hello/src/: hello.txt  main.rs
tamanoir-c2/examples/payloads/reverse-tcp/.cargo/: config.toml
tamanoir-c2/examples/payloads/reverse-tcp/src/: main.rs
tamanoir-c2/payloads/: Cross_aarch64_to_x86_64.toml
tamanoir-c2/payloads/aarch64_to_x86_64_utils/: build.rs
tamanoir-c2/payloads/hello/: build.rs
tamanoir-c2/payloads/hello/.cargo/: config.toml
tamanoir-c2/payloads/hello/src/: build.rs  main.rs
tamanoir-c2/payloads/reverse-tcp/: Cargo.toml
tamanoir-c2/rce-tester/: Cargo.toml
tamanoir-c2/rce-tester/src/: main.rs
tamanoir-c2/src/: builder.rs  cli.rs  grpc_server.rs  handlers.rs  lib.rs  main.rs
tamanoir-c2/src/builder/: commands.rs  mod.rs  utils.rs
tamanoir-c2/src/dns_proxy/: mod.rs  utils.rs
tamanoir-c2/src/handlers/: dns_proxy.rs  mod.rs
tamanoir-c2/src/handlers/dns_proxy/: mod.rs  utils.rs
tamanoir-c2/src/handlers/grpc/: greeter.rs  mod.rs
tamanoir-c2/src/handlers/rce/: mod.rs
tamanoir-c2/src/handlers/rce/builder/: mod.rs  utils.rs
tamanoir-c2/src/handlers/rce/tester/: utils.rs
tamanoir-c2/src/rce/builder/: utils.rs
tamanoir-c2/src/rce/tester/: utils.rs
tamanoir-c2/src/tester/: mod.rs  utils.rs
tamanoir-c2/x_build_utils/: Cross_x86_64.toml  build.rs
tamanoir-common/: Cargo.toml
tamanoir-common/proto/tamanoir/: tamanoir.proto
tamanoir-common/src/: lib.rs
tamanoir-ebpf/: Cargo.toml  build.rs
tamanoir-ebpf/src/: common.rs  egress.rs  ingress.rs  kprobe.rs  lib.rs  main.rs
tamanoir-proxy/: Cargo.toml
tamanoir-proxy/src/: handlers.rs  main.rs
tamanoir-proxy/src/layouts/: azerty.yml  qwerty.yml
tamanoir-rce/: Cargo.toml
tamanoir-rce/payloads/hello/: Cargo.toml
tamanoir-rce/payloads/hello/src/: hello.txt  main.rs
tamanoir-tui/: Cargo.toml  build.rs
tamanoir-tui/src/: app.rs  ebpf.rs  events.rs  handler.rs  handlers.rs  keys.rs  lib.rs  main.rs  tui.rs  ui.rs
tamanoir/src/: lib.rs  main.rs  rce.rs  ringbuf.rs
xtask/src/: run.rs
