[workspace]
resolver = "2"
members = ["xtask", "tamanoir-tui", "tamanoir-ebpf"]

[workspace.dependencies]
aya = { version = "0.13", default-features = false }
aya-ebpf = { version = "0.1", default-features = false }
aya-log = { version = "0.2", default-features = false }
aya-log-ebpf = { version = "0.1", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.18", default-features = false }
clap = { version = "4", default-features = false, features = ["std"] }
env_logger = { version = "0.11", default-features = false }
libc = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
tokio = { version = "1", default-features = false }
which = { version = "6", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.release.package.tamanoir-ebpf]
debug = 2
codegen-units = 1
