[workspace]
resolver = "2"
members = ["tamanoir", "tamanoir-ebpf", "tamanoir-c2","tamanoir-common"]
default-members = ["tamanoir"]

[workspace.dependencies]
aya = { version = "0.13", default-features = false }
aya-ebpf = { version = "0.1", default-features = false }
aya-log = { version = "0.2", default-features = false }
aya-log-ebpf = { version = "0.1", default-features = false }
anyhow = { version = "1", default-features = false }
env_logger = { version = "0.11", default-features = false }
libc = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
tokio = { version = "1", default-features = false }


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"