[package]
name = "tamanoir-c2"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", default-features = true, features = [
  "derive",
  "cargo",
] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9"
toml = "0.8"
tempfile = "3"
env_logger = { version = "0.11", default-features = false }
log = { version = "0.4", default-features = false }
tamanoir-common = { path = "../tamanoir-common" }
tonic = "0.12"
prost = "0.13"
tonic-types = "0.12"

[build-dependencies]
tonic-build = "0.12"
