[package]
name = "tamanoir-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "*"
flex-dns = "1.0.1"


[build-dependencies]
which = { workspace = true }
xtask = { path = "../xtask" }

[[bin]]
name = "tamanoir"
path = "src/main.rs"
