[package]
name = "tamanoir-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28", default-features = false }
ratatui = "0.28"
libc = "0.2"
aya = "0.13"
mio = { version = "1", features = ["os-poll", "os-ext"] }
clap = { version = "4", features = ["derive", "cargo"] }
phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
cargo_metadata = { workspace = true }
tamanoir-ebpf = { path = "../tamanoir-ebpf" }
xtask = { path = "../xtask" }

[[bin]]
name = "tamanoir"
path = "src/main.rs"
