[package]
name = "tamanoir"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, default-features = true, features = [
  "derive",
  "cargo",
] }
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "net",
  "signal",
] }

[build-dependencies]
cargo_metadata = { workspace = true }
tamanoir-ebpf = { path = "../tamanoir-ebpf" }
xtask = { path = "../xtask" }

[[bin]]
name = "tamanoir"
path = "src/main.rs"
