[package]
name = "tamanoir"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", default-features = true, features = [
  "derive",
  "cargo",
] }
anyhow = "1"
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "net",
  "signal",
] }
mio = { version = "1", features = ["os-poll", "os-ext"] }
tamanoir-common = { path = "../tamanoir-common" }

[[bin]]
name = "tamanoir"
path = "src/main.rs"
